# token-community-exchange

./: README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend-tokenchain/: package-lock.json  package.json
frontend-tokenchain/app/: page.tsx
src/: App.tsx  index.css  main.tsx  polyfills.ts
src/components/: BlockchainStatus.tsx  ChainSelector.tsx  CommunityCard.tsx  ConnectWallet.tsx  Footer.tsx  Header.tsx  Logo.tsx  NFTGallery.tsx  NetworkBackground.tsx  PriceChart.tsx  ProfileCard.tsx  SmartContractExplorer.tsx  SwapCard.tsx  TransactionHistory.tsx  TrendingTokens.tsx  UserAvatar.tsx
src/contexts/: MoralisContext.tsx
src/integrations/supabase/: client.ts
src/pages/: Blockchain.tsx  Index.tsx  NotFound.tsx
src/services/: blockchain.ts  moralis.ts
src/types/: ethereum.d.ts
supabase/: config.toml
supabase/functions/get-moralis-key/: index.ts
tokenchain-node/: Cargo.toml  Dockerfile  README.md
tokenchain-node/.github/workflows/: ci.yml
tokenchain-node/api/: README.md  index.js  mint-example.json  package.json
tokenchain-node/examples/: usage.rs
tokenchain-node/examples/js/: README.md  query-balance.ts
tokenchain-node/pallets/amm/: Cargo.toml  README.md  doc.md  lib.rs  tests.rs
tokenchain-node/pallets/community-token/: Cargo.toml  README.md  doc.md  lib.rs  tests.rs
tokenchain-node/pallets/governance/: Cargo.toml  README.md  doc.md  lib.rs  tests.rs
tokenchain-node/pallets/kyc/: Cargo.toml  README.md  doc.md  lib.rs  tests.rs
tokenchain-node/runtime/: Cargo.toml  README.md  doc.md  lib.rs  tests.rs
tokenchain-node/src/: main.rs
