
[package]
name = "tokenchain-node"
version = "0.1.0"
edition = "2021"
authors = ["TokenTrader Team"]
description = "TokenChain: blockchain communautaire pour TokenTrader, basée sur Substrate."

[dependencies]
substrate = { version = "4.0.0-dev", optional = true }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10.0"
tokio = { version = "1.28", features = ["full"] }
jsonrpc-core = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ws-server = "18.0.0"
rand = "0.8.5"

[features]
default = []
substrate-node = ["substrate"]
