[workspace]
members = [
    "pallets/community-token",
    "pallets/governance",
    "pallets/amm",
    "pallets/kyc",
    "runtime"
]

[package]
name = "tokenchain-node"
version = "0.1.0"
edition = "2021"
authors = ["TokenTrader Team"]
description = "TokenChain: blockchain communautaire pour TokenTrader, basée sur Substrate."

[dependencies]
substrate = { git = "https://github.com/paritytech/substrate.git", branch = "master", optional = true }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10.0"
tokio = { version = "1.28", features = ["full"] }
jsonrpc-core = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ws-server = "18.0.0"
rand = "0.8.5"

[features]
default = []
substrate-node = ["substrate"]
